@@ -23,6 +23,17 @@ CHANGES
     being detached from any Session.   UnboundExecutionError
     is specific to engines bound to sessions and statements.
     
+   - Query called in the context of an expression will render
+     disambiguating labels in all cases.    Note that this does
+     not apply to the existing .statement and .subquery()
+     accessor/method, which still honors the .with_labels()
+     setting that defaults to False.  
+     
+   - Query.union() retains disambiguating labels within the
+     returned statement, thus avoiding various SQL composition
+     errors which can result from column name conflicts.
+     [ticket:1676]
+     
 - sql
   - Added math negation operator support, -x.
   
